Complete - task 3288413: maven-woof-plugin to run WoOF applications - https://sourceforge.net/tracker/?func=detail&group_id=156349&atid=7994293288413